changed packaging to jar; added --enable-preview flag;